# oudelohuis-et-al-2027-shared-gain

./: .gitattributes  .gitignore  OverallProperties.py  SP_coupling_vs_GR_gain.py  env_trimmed.yml  example_traces_poprate.py  locomotion_gain.py  molanalysis_env_02_2024.yml  molanalysis_env_02_2025.yml  molanalysis_env_04_2023.yml  molanalysis_env_10_2023.yml  pyproject.toml  setup.py
affinemodel/: analyze_affinefits_Xiaetal.py  fitAffine_Stringeretal.py  fitAffine_singleneuron_GR.py  gain_model.py  popcoupling_nonlinearity_model.py  popcoupling_powerlaw.py  run_fit_nonlin.py  stats_model_fit_dataset1_MOL.ipynb
correlations/: NC_spatial_subtract_gain.py  NC_tuning_subgain.py  nonlin_noisecorr.py
cvPCA/: cvPCA_interarea.ipynb  powerlaws.ipynb  utils_cvPCA.py
decoding/: decoding_vs_gain.py  decoding_vs_rate_labeled.py  gain_VENI_figure.py
deprecated/: MOL_catraces.py  MOL_stack_tiffs.py  analyze_neural_vr_mol.py  calc_dF_F.py  depr_VR_sided_GONOGO  depr_analyze_behavior_vr_mol.py  preprocess_task.py  preprocess_task_nwb.py  trace_inspection.py
detection/: DN_dPCA.py  DN_interarea_corr.py  DN_interarea_corr_labeled.py  LDA_labeled.py  analyze_DN.py  background_tuning.py  behaviorCAT.py  compare_decoders.py  cross_spatial_decoding.py  decode_stim_choice.py  depr_behavior_DN.py  example_cells.py  neural_DN.py  noise_tuning.py  overall_responsiveness.py  pairwise_corr.py  plot_neural_activity_lib.py  pred_hitmiss.py  signal_regression.py  singleneuron_encoding.py  size_neural_dataset.py  space_or_time.py  spatial_behavior.py  spatial_rf.py  task_perf.py
(+154 files in other folders)
